chore(core): minor changes

--- a/packages/core/tsconfig.json
+++ b/packages/core/tsconfig.json
@@ -24,11 +24,7 @@
     "forceConsistentCasingInFileNames": true,
     "isolatedModules": true,
     "verbatimModuleSyntax": true,
-    "skipLibCheck": true,
-    "baseUrl": ".",
-    "paths": {
-      "@/*": ["./src/*"]
-    }
+    "skipLibCheck": true
   },
   "include": ["./src/**/*"]
 }
