--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -11,7 +11,8 @@
     "dist"
   ],
   "scripts": {
-    "build": "pkgroll --minify"
+    "build": "pkgroll --minify --clean-dist",
+    "publish": "pnpm publish"
   },
   "keywords": [
     "standard-schema",
