feat(core): added effect and minor changes

--- a/biome.json
+++ b/biome.json
@@ -7,8 +7,8 @@
     "enabled": true,
     "rules": {
       "recommended": true,
-      "style": {
-        "noNonNullAssertion": "off"
+      "suspicious": {
+        "noExplicitAny": "warn"
       }
     }
   },
