--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -46,10 +46,14 @@
   },
   "peerDependencies": {
     "@valibot/to-json-schema": "^1.0.0-rc.0",
+    "effect": "^3.13.10",
     "zod-to-json-schema": "^3.24.1"
   },
   "peerDependenciesMeta": {
     "@valibot/to-json-schema": {
+      "optional": true
+    },
+    "effect": {
       "optional": true
     },
     "zod-to-json-schema": {
@@ -60,6 +64,8 @@
     "@standard-schema/spec": "^1.0.0",
     "@types/json-schema": "^7.0.15",
     "arktype": "^2.0.4",
-    "pkgroll": "^2.5.1"
+    "pkgroll": "^2.5.1",
+    "valibot": "^1.0.0-rc.4",
+    "zod": "^3.24.2"
   }
 }
