--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,5 +26,5 @@
     "verbatimModuleSyntax": true,
     "skipLibCheck": true
   },
-  "include": ["./src/**/*"]
+  "include": ["./src/**/*", "./tests/**/*"]
 }
