fix: corrected the node resolution

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,8 +5,8 @@
     "moduleDetection": "force",
     "useDefineForClassFields": false,
     "experimentalDecorators": true,
-    "module": "ESNext",
-    "moduleResolution": "bundler",
+    "module": "Node16",
+    "moduleResolution": "nodenext",
     "resolveJsonModule": true,
     "allowJs": true,
     "strict": true,
