--- a/package.json
+++ b/package.json
@@ -1,19 +1,74 @@
 {
-  "name": "@sc/workspace",
-  "version": "0.0.1",
-  "private": true,
+  "name": "@standard-community/standard-json",
+  "version": "0.2.0",
+  "type": "module",
+  "license": "MIT",
+  "main": "dist/index.cjs",
+  "module": "dist/index.js",
+  "types": "dist/index.d.ts",
+  "files": [
+    "dist"
+  ],
   "scripts": {
-    "test": "vitest",
-    "prepare": "is-ci || husky",
-    "format": "biome check --write ."
+    "build": "pkgroll --minify --clean-dist",
+    "format": "biome check --write .",
+    "test": "vitest"
+  },
+  "keywords": [
+    "standard-schema",
+    "standard-community",
+    "standard-schema-community",
+    "json-schema",
+    "convertor"
+  ],
+  "homepage": "https://github.com/standard-community",
+  "publishConfig": {
+    "access": "public"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/standard-community/standard-json.git",
+    "directory": "packages/core"
+  },
+  "bugs": {
+    "url": "https://github.com/standard-community/standard-json/issues"
+  },
+  "exports": {
+    "import": {
+      "types": "./dist/index.d.ts",
+      "default": "./dist/index.js"
+    },
+    "require": {
+      "types": "./dist/index.d.cts",
+      "default": "./dist/index.cjs"
+    }
+  },
+  "peerDependencies": {
+    "@valibot/to-json-schema": "^1.0.0-rc.0",
+    "effect": "^3.13.10",
+    "zod-to-json-schema": "^3.24.1"
+  },
+  "peerDependenciesMeta": {
+    "@valibot/to-json-schema": {
+      "optional": true
+    },
+    "effect": {
+      "optional": true
+    },
+    "zod-to-json-schema": {
+      "optional": true
+    }
   },
   "devDependencies": {
-    "@biomejs/biome": "^1.9.4",
-    "husky": "^9.1.7",
-    "is-ci": "^4.1.0",
-    "nano-staged": "^0.8.0",
-    "typescript": "^5.8.2",
-    "vitest": "^3.0.8"
+    "@biomejs/biome": "^2.0.4",
+    "@standard-schema/spec": "^1.0.0",
+    "@types/json-schema": "^7.0.15",
+    "arktype": "^2.0.4",
+    "pkgroll": "^2.5.1",
+    "typescript": "^5.8.3",
+    "valibot": "^1.0.0-rc.4",
+    "vitest": "^3.2.4",
+    "zod": "^3.24.2"
   },
-  "packageManager": "pnpm@10.6.3+sha512.bb45e34d50a9a76e858a95837301bfb6bd6d35aea2c5d52094fa497a467c43f5c440103ce2511e9e0a2f89c3d6071baac3358fc68ac6fb75e2ceb3d2736065e6"
+  "packageManager": "pnpm@8.14.0+sha256.9cebf61abd83f68177b29484da72da9751390eaad46dfc3072d266bfbb1ba7bf"
 }
