fix: remove minification from build script

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "dist"
   ],
   "scripts": {
-    "build": "pkgroll --minify --clean-dist",
+    "build": "pkgroll --clean-dist",
     "format": "biome check --write .",
     "test": "vitest"
   },
