chore: updated dependency

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@standard-community/standard-json",
-  "version": "0.3.0-rc.1",
+  "version": "0.3.0-rc.2",
   "type": "module",
   "license": "MIT",
   "main": "dist/index.cjs",
@@ -50,7 +50,7 @@
     "arktype": "^2.1.20",
     "effect": "^3.16.8",
     "valibot": "^1.1.0",
-    "zod": "^3.25.67",
+    "zod": "^3.25.0 || ^4.0.0",
     "zod-to-json-schema": "^3.24.5"
   },
   "peerDependenciesMeta": {
