--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@standard-community/standard-json",
-  "version": "0.3.0-rc.5",
+  "version": "0.3.0-rc.6",
   "type": "module",
   "license": "MIT",
   "main": "dist/index.cjs",
@@ -49,6 +49,7 @@
     "@valibot/to-json-schema": "^1.3.0",
     "arktype": "^2.1.20",
     "effect": "^3.16.8",
+    "quansync": "^0.2.11",
     "valibot": "^1.1.0",
     "zod": "^3.25.0 || ^4.0.0",
     "zod-to-json-schema": "^3.24.5"
@@ -75,6 +76,7 @@
   },
   "devDependencies": {
     "@biomejs/biome": "^2.0.4",
+    "@types/node": "^24.3.1",
     "pkgroll": "^2.13.1",
     "typescript": "^5.8.3",
     "vitest": "^3.2.4"
