--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@standard-community/standard-json",
-  "version": "0.3.0-rc.6",
+  "version": "0.3.0",
   "type": "module",
   "license": "MIT",
   "main": "dist/index.cjs",
