--- a/package.json
+++ b/package.json
@@ -84,13 +84,15 @@
       }
     }
   },
+  "dependencies": {
+    "quansync": "^0.2.11"
+  },
   "peerDependencies": {
     "@standard-schema/spec": "^1.0.0",
     "@types/json-schema": "^7.0.15",
     "@valibot/to-json-schema": "^1.3.0",
     "arktype": "^2.1.20",
     "effect": "^3.16.8",
-    "quansync": "^0.2.11",
     "valibot": "^1.1.0",
     "zod": "^3.25.0 || ^4.0.0",
     "zod-to-json-schema": "^3.24.5"
