--- a/package.json
+++ b/package.json
@@ -90,6 +90,7 @@
     "@valibot/to-json-schema": "^1.3.0",
     "arktype": "^2.1.20",
     "effect": "^3.16.8",
+    "typebox": "^1.0.17",
     "quansync": "^0.2.11",
     "valibot": "^1.1.0",
     "zod": "^3.25.0 || ^4.0.0",
@@ -103,6 +104,9 @@
       "optional": true
     },
     "effect": {
+      "optional": true
+    },
+    "typebox": {
       "optional": true
     },
     "valibot": {
