--- a/package.json
+++ b/package.json
@@ -92,6 +92,7 @@
     "effect": "^3.16.8",
     "typebox": "^1.0.17",
     "quansync": "^0.2.11",
+    "sury": "^10.0.0",
     "valibot": "^1.1.0",
     "zod": "^3.25.0 || ^4.0.0",
     "zod-to-json-schema": "^3.24.5"
@@ -107,6 +108,9 @@
       "optional": true
     },
     "typebox": {
+      "optional": true
+    },
+    "sury": {
       "optional": true
     },
     "valibot": {
